--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -77,11 +77,7 @@
           <a href="{% url 'homepage' %}">Подъемные механизмы</a>
         </div>
         <div class="header-search">
-<<<<<<< HEAD
-          <!-- <form action="% url 'search_result' %" method="GET">
-=======
-          <form action={% url 'search_result' %} method="GET">
->>>>>>> 072c191317aa73da9ae42539e6a9a6c07e0c0602
+          <form action="% url 'search_result' %" method="GET">
             <input name="global-search" id="global-search" type="text">
             <button type="submit">
               <svg width="20" height="20" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -89,13 +85,9 @@
               <path d="M17.1284 17.129L21.8746 21.8751" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </button>
-<<<<<<< HEAD
-          </form> -->
-=======
           </form>
           
           
->>>>>>> 072c191317aa73da9ae42539e6a9a6c07e0c0602
         </div>
         <div class="user-nav">
           {% if request.user.is_superuser  %}
@@ -168,12 +160,9 @@
         </ul>
       </div>
     </nav> -->
-<<<<<<< HEAD
-=======
 
 
     
->>>>>>> 072c191317aa73da9ae42539e6a9a6c07e0c0602
       {% block content %}
     
       {% endblock content %}
