--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -80,12 +80,9 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-<<<<<<< HEAD
-=======
 
 
->>>>>>> 072c191317aa73da9ae42539e6a9a6c07e0c0602
-					<h3 id="form-title">LOGIN</h3>
+					<h3 id="form-title">Авторизация</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form method="POST" action="">
@@ -102,37 +99,16 @@
 							</div>
 								<input type="password" name="password" placeholder="Password..." class="form-control" >
 						</div>
-<<<<<<< HEAD
-=======
-
->>>>>>> 072c191317aa73da9ae42539e6a9a6c07e0c0602
 							<div class="d-flex justify-content-center mt-3 login_container">
 				 				<input class="btn login_btn" type="submit" value="Login">
 				   			</div>
 					</form>
-<<<<<<< HEAD
 				</div>
                 <div class="mt-4">
 					<div class="d-flex justify-content-center links">
 						Нет аккаунта? <a href="{% url 'register' %}" class="ml-2">Зарегистрируйтесь!</a>
 					</div>
 					<div class="d-flex justify-content-center links"></div>
-=======
-
-				</div>
-
-                <!-- {% for message in messages %}
-                    <p>{{message}}</p>
-                {% endfor %} -->
-				<div class="mt-4">
-					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
-					</div>
-					<div class="d-flex justify-content-center links">
-						
-					</div>
-			
->>>>>>> 072c191317aa73da9ae42539e6a9a6c07e0c0602
 				</div>
 			</div>
 		</div>
