--- a/store/templates/store/register.html
+++ b/store/templates/store/register.html
@@ -109,7 +109,7 @@
 						</div>
 
 				   		<div class="d-flex justify-content-center mt-3 login_container">
-				 			<input class="btn login_btn" type="submit" value="Register Account">
+				 			<input class="btn login_btn" type="submit" value="Зарегистрироваться">
 				   		</div>
 					</form>
 				</div>
@@ -118,7 +118,7 @@
 				
                 <div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Already have an account? <a href="{% url 'homepage' %}" class="ml-2">Login</a>
+						Уже есть аккант? <a href="{% url 'homepage' %}" class="ml-2">Авторизируйтесь</a>
 					</div>
 				</div>
 			</div>
