--- a/store/templates/store/adminPanel/create_product.html
+++ b/store/templates/store/adminPanel/create_product.html
@@ -45,7 +45,7 @@
     <p>{{form.priceSell.label}}:</p>
     <p>{{form.priceSell}}</p>
   </div>
-  <p>{{form.errors.label}}</p>
+  <p>{{form.errors}}</p>
   <p><button class="manage-order-btn" type="Submit">Создать товар</button></p>
 </form>
 
