--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -35,9 +35,9 @@
           
               <input type="text" required class="input-field" name="street" placeholder="Улица" >
             
-              <input cla type="text" required class="input-field" name="house" placeholder="Дом" >
+              <input type="number" required class="input-field" name="house" placeholder="Дом" >
             
-              <input type="text" required class="input-field" name="appartament" placeholder="Квартира" >
+              <input type="number" required class="input-field" name="appartament" placeholder="Квартира" >
             </div>    
         </div>
         <input type="submit" class="checkout cart-checkout-btn" value="Отправить заказ" id="order-products"/>
