--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -77,7 +77,7 @@
           <a href="{% url 'homepage' %}">Подъемные механизмы</a>
         </div>
         <div class="header-search">
-          <form action="% url 'search_result' %" method="GET">
+          <form action="{% url 'search_result' %}" method="GET">
             <input name="global-search" id="global-search" type="text">
             <button type="submit">
               <svg width="20" height="20" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
