--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -106,7 +106,8 @@
 				</div>
                 <div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Нет аккаунта? <a href="{% url 'register' %}" class="ml-2">Зарегистрируйтесь!</a>
+						// Нет аккаунта? <a href="{% url 'register' %}" class="ml-2">Зарегистрируйтесь!</a>
+						For testing: login/password: admin
 					</div>
 					<div class="d-flex justify-content-center links"></div>
 				</div>
